[gd_scene load_steps=15 format=3 uid="uid://b33j0n3ifbfc3"]

[ext_resource type="Texture2D" uid="uid://spgipmonojtq" path="res://src/main/assets/texture/FX/Projectile/CanonBall.png" id="1_0hev7"]
[ext_resource type="Script" path="res://src/main/scene/role/bullet/bullet.gd" id="1_53xrd"]
[ext_resource type="Texture2D" uid="uid://nrhnej6wsr2h" path="res://src/main/assets/texture/FX/Magic/Circle/SpriteSheetWhite.png" id="3_m8f83"]
[ext_resource type="AudioStream" uid="uid://b14bks35p754h" path="res://src/main/assets/sound/发射音效/默认发射音效.mp3" id="4_2i4dr"]
[ext_resource type="AudioStream" uid="uid://lgie1yt37eay" path="res://src/main/assets/sound/子弹音效/火炮爆炸.ogg" id="5_6gsse"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j0rkq"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_li7kg"]
atlas = ExtResource("3_m8f83")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi23s"]
atlas = ExtResource("3_m8f83")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3et2"]
atlas = ExtResource("3_m8f83")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r83it"]
atlas = ExtResource("3_m8f83")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sbrdm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_li7kg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi23s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3et2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r83it")
}],
"loop": false,
"name": &"explosion",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_nx6mj"]
resource_name = "rolling"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBullet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_yu8ce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBullet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ioal2"]
_data = {
"RESET": SubResource("Animation_yu8ce"),
"rolling": SubResource("Animation_nx6mj")
}

[node name="Bullet" type="Area2D" groups=["attack"]]
script = ExtResource("1_53xrd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_j0rkq")

[node name="SpriteBullet" type="Sprite2D" parent="."]
texture = ExtResource("1_0hev7")
hframes = 5

[node name="AniExplosion" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sbrdm")
animation = &"explosion"

[node name="AniBullet" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ioal2")
}

[node name="LifeTimer" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(7.15256e-07, 1.19209e-07)
scale = Vector2(0.7, 0.7)

[node name="AudioFire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2i4dr")
volume_db = 10.0

[node name="AudioExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6gsse")
volume_db = -10.0
